--- a/Vidk/Vidk.csproj
+++ b/Vidk/Vidk.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201711121143433_PouplateMembershipTypes.Designer.cs">
       <DependentUpon>201711121143433_PouplateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711121255394_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201711121255394_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201711121255394_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -315,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711121143433_PouplateMembershipTypes.resx">
       <DependentUpon>201711121143433_PouplateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711121255394_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201711121255394_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
